--- a/css/signin.css
+++ b/css/signin.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 .signin{
-  background: url("./images/login_bg.jpg") center top no-repeat fixed #0a0807;;
+  background: url("../images/login_bg.jpg") center top no-repeat fixed #0a0807;;
   background-size: cover;
   -webkit-background-size: cover;
   width: 100%;
