상대경로로 수정

--- a/css/common.css
+++ b/css/common.css
@@ -90,7 +90,7 @@ img {
 .f_menu {
   display: flex;
   flex-wrap: wrap;
-  background: url("./images/footer_logo.png") right 8px no-repeat;
+  background: url("../images/footer_logo.png") right 8px no-repeat;
 }
 .f_menu ul {
   width: 220px;
