--- a/css/signin.css
+++ b/css/signin.css
@@ -67,7 +67,7 @@
   height: 26px;
   line-height: 26px;
   padding-left: 35px;
-  background: #fff url("./images/check_off.png") 0 0 no-repeat;
+  background: #fff url("../images/check_off.png") 0 0 no-repeat;
   font-size: 16px;
   color: #3f4141;
   cursor: pointer;
@@ -75,7 +75,7 @@
   cursor: pointer;
 }
 .signin #id_save:checked + label{
-  background: #fff url("./images/check_on.png") no-repeat 0 0;
+  background: #fff url("../images/check_on.png") no-repeat 0 0;
   background-size: 26px;
 }
 /* 로그인 */
